# controller

./: CMakeLists.txt  package.xml
conf/: cfile.conf
include/: mainwindow.h
src/: ctrl.cpp  main.cpp  mainwindow.cpp
ui/: control.pro  mainwindow.ui
